--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:appcompat-v7:24.2.1'
 
     compile(group: 'com.bezirk', name: 'android-zirk-proxy', version: '3.0.1', ext: 'aar') {
