--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile "com.android.support:cardview-v7:+"
     compile 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
 
     compile(group: 'com.bezirk', name: 'android-zirk-proxy', version: '3.0.1', ext: 'aar') {
